cabal-version:   3.4
name:            turbo-k
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

common warnings
  ghc-options: -Wall

executable turbo-k
  import:           warnings, extensions
  main-is:          Main.hs
  other-modules:    TurboK
  hs-source-dirs:   app
  build-depends:
    , base                  ^>=4.18.0.0
    , haskeline
    , megaparsec
    , optparse-applicative
    , text

  default-language: GHC2021

test-suite turbo-k-test
  import:           warnings, extensions
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base              ^>=4.18.0.0
    , hspec
    , hspec-megaparsec
    , megaparsec
    , turbo-k
