cabal-version:   3.4
name:            yaq
version:         0.1.0.0
license:         MIT
license-file:    LICENSE
author:          andrii
maintainer:      25188+unorsk@users.noreply.github.com
build-type:      Simple
extra-doc-files: CHANGELOG.md

common extensions
  default-extensions:
    DuplicateRecordFields
    LambdaCase
    OverloadedRecordDot
    OverloadedStrings

common warnings
  ghc-options: -Wall

library
  import:           warnings, extensions
  exposed-modules:
    MyLib
    NaiveParser
    Parserq

  build-depends:
    , base        ^>=4.17.0.0
    , megaparsec
    , text

  hs-source-dirs:   lib
  default-language: GHC2021

executable yaq
  import:           warnings, extensions
  main-is:          Main.hs
  build-depends:
    , base                  ^>=4.17.0.0
    , haskeline
    , optparse-applicative
    , yaq

  hs-source-dirs:   app
  default-language: GHC2021

test-suite yaq-test
  import:           warnings
  default-language: GHC2021
  type:             exitcode-stdio-1.0
  hs-source-dirs:   test
  main-is:          Main.hs
  build-depends:
    , base  ^>=4.17.0.0
    , yaq
